--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "build": "rm -rf dist && cd ../client && npm run build && cp -r dist ../server/dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
