--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "build": "rm -rf dist && cd ../client && npm run build && cp -r dist ../server/dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose --runInBand"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,12 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.21",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "globalTeardown": "./testing/teardown.js"
   }
 }
